--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -74,10 +74,6 @@
 
 .faq__toggle {
   margin-left: auto;
-
-  @media (max-width: $mobile-width) {
-    margin-left: 15px;
-  }
 }
 
 .faq__answer {
@@ -107,6 +103,7 @@
 
   @media (max-width: $mobile-width) {
     @include font(16px, 22.4px);
+    margin-right: 15px;
   }
 }
 
